--- a/file.html
+++ b/file.html
@@ -8,5 +8,6 @@
         <h1>bonjour</h1>
         <p>ceci est mon premier fichier dans la repertoire git</p>
         <p>ceci est fichier dans la repertoire git</p>
+        <p>hello word</p>
     </body>
 </html>
