--- a/file.html
+++ b/file.html
@@ -9,5 +9,6 @@
         <p>ceci est mon premier fichier dans la repertoire git</p>
         <p>ceci est fichier dans la repertoire git</p>
         <p>farah salma</p>
+        <h2>salut</h2>
     </body>
 </html>
